user can register and sees flash conf

--- a/views/registration.erb
+++ b/views/registration.erb
@@ -1,6 +1,6 @@
 <h1>Register Here!</h1>
 
-<form action="/" method="post">
+<form action="/registration" method="post">
   <ul>
     <li>
       <label name="username">Username</label>
