--- a/views/homepage2.erb
+++ b/views/homepage2.erb
@@ -1,21 +1,3 @@
-<a href="/registration"><button>Register</button></a>
-
-<h2>Sign In</h2>
-
-<form action="/" method="post">
-  <ul>
-    <li>
-      <label name="username">Username</label>
-      <input type="text" name="username" id="username"/>
-    </li>
-    <li>
-      <label name="password">Password</label>
-      <input type="password" name="password" id="password"/>
-    </li>
-    <li>
-      <button>Sign In</button>
-    </li>
-  </ul>
-</form>
-
 <h1><%= "Welcome #{name}" %></h1>
+
+<a href="/logout"><button>Logout</button></a>
