user gets errors if not filling out registration

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,8 +3,8 @@
   <article class="one_half" id="flash_box">
     <% if flash[:notice] %>
       <p style="color: green"><%= flash[:notice] %></p>
-    <% elsif flash[:registration] %>
-      <p style="color: red"><%= flash[:registration] %></p>
+    <% elsif flash[:error] %>
+      <p style="color: red"><%= flash[:error] %></p>
     <% end %>
   </article>
   <article class="one_fourth"></article>
