--- a/views/homepage2.erb
+++ b/views/homepage2.erb
@@ -10,16 +10,9 @@
   <% end %>
 </ul>
 
-<ul>
-  <%= list_of_fishes %>
+<ul><% users_fish_data.each do |fish_hash| %>
+      <li><a href="<%= fish_hash["wiki_link"] %>"><%= fish_hash["fishname"] %></a></li>
+  <% end %>
 </ul>
 
-<!--def list_of_users-->
-<!--users =  @database_connection.sql("SELECT username, id FROM users")-->
-<!--usernames =  users.map do |u|-->
-<!--if session[:user_id] != u["id"].to_i-->
-<!--"<a href='/user/#{u["username"]}'><li>" + u["username"] + "</li></a>"-->
-<!--end-->
-<!--end-->
-<!--usernames.join-->
-<!--end-->
+
