--- a/views/homepage2.erb
+++ b/views/homepage2.erb
@@ -15,7 +15,11 @@
   <% users_data.map do |hash| %>
     <% if session[:user_id] != hash["id"].to_i %>
       <li><a href="/user/<%= hash["username"] %>"><%= hash["username"] %></a></li><br>
-        <form action='/delete_user' method='post'><button name='delete_user' type='submit' value='<%= hash["username"] %>'>Delete <%= hash["username"] %></button></form>
+        <form action='/delete_user' method='post'>
+          <button name='delete_user' type='submit' value='<%= hash["username"] %>'>
+            Delete <%= hash["username"] %>
+          </button>
+        </form>
     <% end %>
   <% end %>
 </ul>
@@ -26,5 +30,7 @@
       <li><a href="<%= fish_hash["wiki_link"] %>"><%= fish_hash["fishname"] %></a></li>
   <% end %>
 </ul>
+
+<h3><a href="/fish_factory">Create a Fish</a></h3>
 
 
